--- a/_config.yml
+++ b/_config.yml
@@ -14,14 +14,12 @@ markdown: kramdown
 
 
 ### content configuration ###
-title:       "Deep Learning for Artificial Intelligence"
+title:       "Introduction to Deep Learning 2018"
 keywords:    "artificial intelligence, deep learning, teaching, course, barcelona, upc, catalonia"
 description: "Course page for Deep Learning for Artificial Intelligence at UPC TelecomBCN, Barcelona, Catalonia."
 source_link: "https://github.com/imatge-upc/wwwtemplate"
 favicon:     "img/favicon.ico"
 touch_icon:  "img/apple-touch-icon.png"
-# google_analytics_key: UA-49607422-1 ## put YOUR key here to enable tracking! (blank to disable)
-
 
 ### template colors, used site-wide via css ###
 colors:
